--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "cryptography>=43.0.0",
     "pre-commit>=4.3.0",
     "types-requests>=2.32.4.20250809",
+    "pyright>=1.1.404",
 ]
 
 # ---------------------------
